Tweak the plugin content (yet untested) to our liking

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,20 +1,20 @@
+---
 name: Build
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
+on: [push, pull_request]
 
 jobs:
   plugin_test:
     name: asdf plugin test
+
     strategy:
       matrix:
         os:
           - ubuntu-latest
           - macos-latest
-    runs-on: ${{ matrix.os }}
+
+    runs-on: ${{matrix.os}}
+
     steps:
       - name: asdf_plugin_test
         uses: asdf-vm/actions/plugin-test@v2
