--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,6 +26,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v3
+
       # uses .markdownlint.yml for configuration
       - name: markdownlint
         uses: DavidAnson/markdownlint-cli2-action@v11
