--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,14 +9,19 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: asdf-vm/actions/install@v2
-      - run: scripts/lint.bash
+
+      - name: install
+        uses: asdf-vm/actions/install@v2
+
+      - name: lint.bash
+        run: scripts/lint.bash
 
   actionlint:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
+
       - name: Check workflow files
         uses: docker://rhysd/actionlint:1.6.23
         with:
