Add a pull request template (Community Standards)

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -39,6 +39,7 @@ jobs:
         with:
           globs: |
             .github/ISSUE_TEMPLATE/*.md
+            .github/*.md
             *.md
             LICENSE
 
