Fix typos in security policy (#14)
* Fix typos in security policy

* Bump asdf-vm/actions/plugin-test from @v2 to @v3

* Be consistent in what pip we use

* Test with a version

For now this should do; if we run into trouble we can
always revisit

* Avoid duplicate CI runs

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 ---
 name: Build
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
   plugin_test:
@@ -31,6 +31,7 @@ jobs:
         run: pip3 install wheel
 
       - name: plugin-test
-        uses: asdf-vm/actions/plugin-test@v2
+        uses: asdf-vm/actions/plugin-test@v3
         with:
           command: awslocal --version
+          version: 0.21
