--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -5,7 +5,7 @@
   ],
   "packageRules": [
     {
-      "matchFilesNames": [
+      "matchFileNames": [
         ".github/**/*.yml",
         ".tool-versions"
       ],
