--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,8 +34,7 @@ jobs:
       - name: python
         uses: actions/setup-python@82c7e631bb3cdc910f68e0081d67478d79c6982d # v5.1.0
         with:
-          # renovate datasource: github-tags, depName: actions/python-versions
-          python-version: 3.11.9
+          python-version: ${{steps.tool-versions.outputs.python}}
 
       - name: wheel
         run: pip3 install wheel
