--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,7 @@ jobs:
         run: pip3 install wheel
 
       - name: plugin-test
+        # renovate datasource: github-tags, depName: asdf-vm/actions
         uses: asdf-vm/actions/plugin-test@05e0d2ed97b598bfce82fd30daf324ae0c4570e6 # v3.0.2
         with:
           command: awslocal --version
