--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
         run: pip3 install wheel
 
       - name: plugin-test
-        uses: asdf-vm/actions/plugin-test@1902764435ca0dd2f3388eea723a4f92a4eb8302 # v4.0.0
+        uses: asdf-vm/actions/plugin-test@v3.0.2
         with:
           command: awslocal --version
           # renovate datasource: pypi, depName: awscli-local
