--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,19 @@ jobs:
 
       - name: plugin-test
         uses: asdf-vm/actions/plugin-test@1902764435ca0dd2f3388eea723a4f92a4eb8302 # v4.0.0
+        continue-on-error: true
         with:
           command: awslocal --version
           # renovate datasource: pypi, depName: awscli-local
           version: 0.22.0
+
+      # same as above, but works around an asdf-vm/actions/plugin-test issue where the ref is Nok
+      - name: plugin-test
+        uses: asdf-vm/actions/plugin-test@v3.0.2
+        if: failure()
+        with:
+          command: awslocal --version
+          # renovate datasource: pypi, depName: awscli-local
+          version: 0.22.0
+          giturl: ${{ github.event.pull_request.head.repo.full_name }}
+          gitref: ${{ github.head_ref }}
